--- a/war/index.html
+++ b/war/index.html
@@ -10,11 +10,11 @@
 <body>
   <script language="JavaScript" type="text/javascript" src="js/jquery.js" ></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
+  <!-- <script type="text/javascript" src="js/main.js"></script> -->
 
   <div class="row col-lg-12 col-md-12" id="mainContainer">
     <div class="searchArea">
-      <form action="result.html" method="get" id="search">
+      <form action="RestaurantReview.html" method="get" id="search">
         <input type="text" name="hotel" class="input" placeholder="" maxlength="200" id="headerBarSearch" />
         <input type="text" name="location" class="input" placeholder="" value="San Francisco" data-longgeoid="72057594043244994"maxlength="200" />
         <button class="submitButton" type="submit">
